--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -210,8 +210,8 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-      - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - destroy-environment
+
 
   configure-server:
     docker:
@@ -251,8 +251,8 @@ jobs:
           root: ~/
           paths:
             - project/backend/.env
-      - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - destroy-environment
+
 
 
   run-migrations:
@@ -308,8 +308,8 @@ jobs:
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-      - destroy-environment
-      - revert-migrations
+      - destroy-environment 
+      - revert_migrations
 
   deploy-backend:
     docker:
@@ -352,7 +352,7 @@ jobs:
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
       - destroy-environment
-      - revert-migrations
+      - revert_migrations
 
   # cleanup:
   #   docker:
@@ -412,13 +412,10 @@ jobs:
               exit 1
             fi
       - destroy-environment
-      - revert-migrations
+      - revert_migrations
 
  
-  # then
-  #               echo "DB migration was successful, will update kvdb..."
-  #               curl "https://kvdb.io/LwfjS5JcxvnfaZhWDgyGw8/migration_${CIRCLE_WORKFLOW_ID:0:7}"  -d '1'
-  #             fi 
+
 workflows:
   default:
     jobs:
