--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -12,8 +12,8 @@
     - ansible_stdout_callback: yaml
 
   pre_tasks:
-    - name: "wait 300 seconds for target connection to become reachable/usable."
-      command: sleep 300
+    - name: "wait 600 seconds for target connection to become reachable/usable."
+      command: sleep 600
 
     - name: "install python for Ansible."
       apt:
@@ -31,7 +31,7 @@
     - TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
     - TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
     - TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
-    - TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT')}}"
+    - TYPEORM_PORT: 5432
     - TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
     - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
   roles:
