--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -232,9 +232,24 @@ jobs:
       - run:
           name: Configure server
           command: |
-            cd .circleci/ansible
+            echo NODE-ENV= production > ~/project/backend/.env
+            echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> ~/project/backend/.env
+            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> ~/project/backend/.env
+            echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> ~/project/backend/.env
+            echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> ~/project/backend/.env
+            echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> ~/project/backend/.env
+            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> ~/project/backend/.env
+            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> ~/project/backend/.env
+            echo TYPEORM_PORT=$TYPEORM_PORT >> ~/project/backend/.env
+            cat ~/project/backend/.env
+
+            cd ~/project/circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
           no_output_timeout: 40m
+      - persistent_to_workspace:
+          root: ~/
+          paths:
+            - project/backend/.env
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
           
@@ -242,16 +257,33 @@ jobs:
 
   run-migrations:
     docker:
-      - image: cimg/node:18.4.0
+      - image: cimg/node:13.8.0
+        environment:
+          TYPEORM_CONNECTION: $TYPEORM_CONNECTION
+          TYPEORM_ENTITIES: $TYPEORM_ENTITIES
+          TYPEORM_HOST: $TYPEORM_HOST
+          TYPEORM_PORT: $TYPEORM_PORT
+          TYPEORM_USERNAME: $TYPEORM_USERNAME
+          TYPEORM_PASSWORD: $TYPEORM_PASSWORD
+          TYPEORM_DATABASE: $TYPEORM_DATABASE
+          TYPEORM_MIGRATIONS: $TYPEORM_MIGRATIONS
+          TYPEORM_MIGRATIONS_DIR: $TYPEORM_MIGRATIONS_DIR
     steps:
       - checkout
       - install_awscli
+      - attach_workspace:
+          at: ~/
       - run:
           name: Run migrations
           command: |
+
             cd backend
             npm install
             npm run migrations > migrations_dump.txt
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - project/backend
       - run:
           name: Send migration status to kvdb.io
           command: |
