--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -243,7 +243,7 @@ jobs:
             echo TYPEORM_PORT=$TYPEORM_PORT >> ~/project/backend/.env
             cat ~/project/backend/.env
 
-            cd ~/project/circleci/ansible
+            cd ~/project/.circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
           no_output_timeout: 40m
       - persist_to_workspace:
