--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -246,10 +246,10 @@ jobs:
             cd ~/project/.circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
           no_output_timeout: 40m
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - project/backend/.env
+      # - persist_to_workspace:
+      #     root: ~/
+      #     paths:
+      #       - project/backend/.env
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
           
