--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -258,16 +258,16 @@ jobs:
   run-migrations:
     docker:
       - image: cimg/node:13.8.0
-        environment:
-          TYPEORM_CONNECTION: $TYPEORM_CONNECTION
-          TYPEORM_ENTITIES: $TYPEORM_ENTITIES
-          TYPEORM_HOST: $TYPEORM_HOST
-          TYPEORM_PORT: $TYPEORM_PORT
-          TYPEORM_USERNAME: $TYPEORM_USERNAME
-          TYPEORM_PASSWORD: $TYPEORM_PASSWORD
-          TYPEORM_DATABASE: $TYPEORM_DATABASE
-          TYPEORM_MIGRATIONS: $TYPEORM_MIGRATIONS
-          TYPEORM_MIGRATIONS_DIR: $TYPEORM_MIGRATIONS_DIR
+        # environment:
+        #   TYPEORM_CONNECTION: $TYPEORM_CONNECTION
+        #   TYPEORM_ENTITIES: $TYPEORM_ENTITIES
+        #   TYPEORM_HOST: $TYPEORM_HOST
+        #   TYPEORM_PORT: $TYPEORM_PORT
+        #   TYPEORM_USERNAME: $TYPEORM_USERNAME
+        #   TYPEORM_PASSWORD: $TYPEORM_PASSWORD
+        #   TYPEORM_DATABASE: $TYPEORM_DATABASE
+        #   TYPEORM_MIGRATIONS: $TYPEORM_MIGRATIONS
+        #   TYPEORM_MIGRATIONS_DIR: $TYPEORM_MIGRATIONS_DIR
     steps:
       - checkout
       - install_awscli
