--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -279,6 +279,7 @@ jobs:
 
             cd backend
             npm install
+            npm run build
             npm audit fix 
             npm run migrations > migrations_dump.txt
       - persist_to_workspace:
