--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -280,7 +280,7 @@ jobs:
             cd backend
             npm install
             npm run build
-            npm audit fix 
+            npm audit fix --force
             npm run migrations > migrations_dump.txt
       - persist_to_workspace:
           root: ~/
