--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -232,17 +232,6 @@ jobs:
       - run:
           name: Configure server
           command: |
-            # echo NODE-ENV= production > ~/project/backend/.env
-            # echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> ~/project/backend/.env
-            # echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> ~/project/backend/.env
-            # echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> ~/project/backend/.env
-            # echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> ~/project/backend/.env
-            # echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> ~/project/backend/.env
-            # echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> ~/project/backend/.env
-            # echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> ~/project/backend/.env
-            # echo TYPEORM_PORT=$TYPEORM_PORT >> ~/project/backend/.env
-            # cat ~/project/backend/.env
-
             cd ~/project/.circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
           no_output_timeout: 40m
@@ -257,7 +246,7 @@ jobs:
 
   run-migrations:
     docker:
-      - image: cimg/node:13.8.0
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - install_awscli
@@ -271,6 +260,8 @@ jobs:
           command: |
             cd backend
             npm install
+            npm audit fix --force
+            npm audit fix --audit-level=critical
             npm run migrations > migrations_dump.txt
       - persist_to_workspace:
           root: ~/
