--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -270,8 +270,8 @@ jobs:
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-                curl https://kvdb.io/7hmTDYVHKY8heVdFvP313a/migration_$\{CIRCLE_WORKFLOW_ID:0:7\}  -d '1'
-            fi
+                curl https://kvdb.io/LwfjS5JcxvnfaZhWDgyGw8/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+              fi
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
